[package]
name = "kataster"
version = "0.16.0"
authors = ["Boris Boutillier <boris.boutillier@gmail.com>"]
edition = "2021"
repository = "https://github.com/Bobox214/Kataster"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = ["bevy_remote"] }
leafwing-input-manager = "0.17"
rand = "0.8"
bevy_hanabi = "0.16"
avian2d = { version = "0.3" , features = [ "debug-plugin" ] } 